<resources>
    <string name="app_name">Queens</string>
    <string name="title">¡Hola</string>
    <string name="subtitle">Conoce a tus Queens</string>
    <string name="user">Correo electronico</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Contraseña (8 caracteres)</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="btn_signUp">sign up with</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_recover_pass">Recuperar Contraseña</string>
    <string name="banner">"El Drag es Arte y el Arte es subjetivo"</string>
    <string name="name">Nombre y Apellido</string>
    <string name="number">Numero de contacto (sin 0 ni 15)</string>
    <string name="register">Registro</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_send">Enviar</string>
    <string name="exit">Cerrar Sesion</string>
    <string name="recover">Recuperar Contraseña</string>
    <string name="recover_title">Ingrese su correo electronico</string>
    <string name="recover_subtitle">Ingrese el codigo de confirmacion</string>
    <string name="btn_confirm_code">Confirmar</string>
    <string name="recover2_title">Ingrese su nueva contraseña</string>
    <string name="recover2_subtitle">Repita la nueva contraseña</string>
    <string name="action1">Contratar</string>
    <string name="action2">Comentar</string>
    <string name="action3">Publicar</string>
    <string name="detail_name">Nombre real:</string>
    <string name="detail_age">Edad:</string>
    <string name="hire">Contratar</string>
    <string name="hire_title">Seleccione un artista</string>
    <string name="price">Precio</string>
    <string name="time">Horas</string>
    <string name="description">Descripcion del trabajo</string>
    <string name="comment">Comentarios</string>
    <string name="new_comment">Nuevo Comentario</string>
    <string name="rating">Calificacion</string>
    <string name="btn_add">Añadir</string>
</resources>